--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="Konstanius-Development.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="konstanius.js" defer=""></script>
-    <meta http-equiv="refresh" content="2.5;url=http://konstanius.me/Portfolio.html">
+    <meta http-equiv="refresh" content="2.5;url=http://konstanius.github.io/Portfolio.html">
     <meta property="og:title" content="Konstanius Development">
     <meta property="og:description" content="Konstantin Dubnack - Premium Frontend / Backend Developer for business and private customers of every budget.">
     <meta property="og:image" content="http://www.konstanius.tk/images/favicon2.png">
