--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta http-equiv="refresh" content="2.5;url=http://konstanius.github.io/Portfolio.html">
     <meta property="og:title" content="Konstanius Development">
     <meta property="og:description" content="Konstantin Dubnack - Premium Frontend / Backend Developer for business and private customers of every budget.">
-    <meta property="og:image" content="http://www.konstanius.tk/images/favicon2.png">
-    <meta property="og:url" content="http://www.konstanius.tk">
+    <meta property="og:image" content="http://konstanius.github.io/images/favicon2.png">
+    <meta property="og:url" content="http://konstanius.github.io">
     <link rel="icon" href="images/favicon2.png">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     
